tests/instantiating/negative_array_size/stderr.golden
error: functionality 'S' has negative array size -1
bus.fbd +2:2
   |
 2 | 	S [-1] status
   | 	^
